# explore_local

./: .gitignore  README.md
app/: main.cpp
challenge/custom_sed/: Makefile  README.md  ccsed  sed.cpp  test.txt  unquoted.txt
headers/: login.hpp
lib/: login.cpp
login_app/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  test.cpp
login_app/exception/: file_err.cpp  file_err.hpp
login_app/headers/: database.hpp
login_app/include/: CMakeLists.txt
login_app/lib/: CMakeLists.txt  database.cpp  login.cpp  login.hpp
login_app/utils/: CMakeLists.txt  file.cpp  file.hpp
